# XD-terms-dictionary

./: .gitignore  pyproject.toml
.github/workflows/: pages.yml
data/: 2022-11-10-diccionarioDatosXicotliData.xlsx  diccionarioDatosXicotliData.xlsx
src/xd_dictionary/: xd_dictionary.py
src/xd_dictionary/templates/: base.html.jinja  terms.html.jinja
